added ceph logo, option to custom pool config, updated readme.
this commit does:
- ceph logo is displayed by default (overwritable under
  assets/images/logo.png).
- config.yaml now takes a hash with the two pools, and a display_name to
  customize the pool name displayed in the dashboard

--- a/dashboards/ceph.erb
+++ b/dashboards/ceph.erb
@@ -2,7 +2,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="catalyst" data-view="Image" data-title="Catalyst" data-image="/catalyst.png" data-width="250px"></div>
+      <div data-id="catalyst" data-view="Image" data-title="logo" data-image="/logo.png" data-width="150px"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="status" data-view="Health" data-title="Cluster Status" data-text=". status will show here ."></div>
@@ -11,10 +11,10 @@
       <div data-id="storage" data-view="Meter" data-title="Storage"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="pool-images" data-view="Number" data-title="Images"></div>
+      <div data-id="pool0" data-view="Number"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="pool-volumes" data-view="Number" data-title="Volumes"></div>
+      <div data-id="pool1" data-view="Number"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="traffic" data-view="Mgraph" data-title="Traffic" data-moreinfo="read / write"></div>
