--- a/dashboards/ceph.erb
+++ b/dashboards/ceph.erb
@@ -1,5 +1,28 @@
 <% content_for :title do %>CEPH Storage Cluster<% end %>
-<div class="gridster">
+<script>
+refresh_secs = getQueryVariable('refresh');
+
+function getQueryVariable(variable) {
+  var query = window.location.search.substring(1);
+  var vars = query.split("&");
+  for (var i=0;i<vars.length;i++) {
+    var pair = vars[i].split("=");
+    if (pair[0] == variable) {
+      return pair[1];
+    }
+  }
+}
+
+function refresh() {
+  window.location.reload(true);
+  setTimeout(refresh, refresh_secs * 1000);
+}
+
+if (refresh_secs != null)
+  window.onload=setTimeout(refresh, refresh_secs * 1000);
+
+</script>
+<div class="gridster" onclick="window.alert();">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="catalyst" data-view="Image" data-title="logo" data-image="/logo.png" data-width="150px"></div>
