fixes bug with numbers rounding.
Meter and mgraph widgets do not round numbers properly. this commit does
the rounding on the ruby job side, and pushes them to the viz part.

Fixes #3.

--- a/dashboards/ceph.erb
+++ b/dashboards/ceph.erb
@@ -31,7 +31,7 @@ if (refresh_secs != null)
       <div data-id="status" data-view="Health" data-title="Cluster Status" data-text=". status will show here ."></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="storage" data-view="Meter" data-title="Storage"></div>
+      <div data-id="storage" data-view="Meter" data-title="Storage (Raw)"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="pool0" data-view="Number"></div>
