added iops to the main dashboard.

--- a/dashboards/ceph.erb
+++ b/dashboards/ceph.erb
@@ -39,8 +39,11 @@ if (refresh_secs != null)
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="pool1" data-view="Number"></div>
     </li>
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="traffic" data-view="Mgraph" data-title="Traffic" data-moreinfo="read / write"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="iops" data-view="Graph" data-title="IOPS"></div>
     </li>
   </ul>
 </div>
